--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ All Our Instructors have 5+ years of working in the Web development industry.Man
 <footer class="p-5 bg-dark text-white text-center position-relative">
     <div class="container">
         <p class="lead">
-            CopyRight &copy; 2024 Opiyo Frontend Bootcamp.All rights Reserved. <a  href="#" class="position-absolute h1 end-0 h3">Go up⬆</a>
+            CopyRight &copy; 2024 Opiyo Frontend Bootcamp <span style="color: rgba(255, 0, 251, 0.701);">(Note:This site is still undergoing Development.More features will be incorporated from time to time.)</span>.All rights Reserved. <a  href="#" class="position-absolute h1 end-0 h3">Go up⬆</a>
         </p>
           
      
